# banknote-detector

./: .gitattributes  .gitignore  README.md  banknote_detection_model_evaluation_report.html  live_camera_stream.py  pyproject.toml  yolo_export_formats_guide.md
exported_models/: export_results.json
exported_models/yolo11x_banknote/onnx/: yolo11x_banknote.onnx
exported_models/yolo11x_banknote/tensorrt/: yolo11x_banknote.engine
helpers/: copy_dataset_files.py  create_val_split_from_test_split.py  delete_npy_files.py  edit_labels_to one_label.py  optimal_workers.py
model_outputs/banknote_detection_yolo11x_outputs/: args.yaml  results.csv
model_outputs/banknote_detection_yolo11x_outputs/weights/: best.onnx  best.pt  last.pt
model_training/: hyperparameters_tuning.py  model_exportation.py  model_inference.py  model_training.py  model_validation.py
